@@ -304,7 +304,7 @@ sub _killall {
     return;
 }
 
-sub programs {
+sub processes {
     my ($self) = @_;
     $self = POE::Quickie->new() if ref $self ne 'POE::Quickie';
 
@@ -400,7 +400,7 @@ sub quickie_tee_merged {
 
 =head1 NAME
 
-POE::Quickie - A lazy way to wrap blocking programs
+POE::Quickie - A lazy way to wrap blocking code and programs
 
 =head1 SYNOPSIS
 
@@ -451,7 +451,7 @@ specify any of the parameters below, since a POE::Quickie object will be
 constructed automatically when it is needed. The rest of the methods can
 be called on the object (C<< $object->run() >>) or as class methods
 (C<< POE::Quickie->run() >>). You can safely let the object go out of scope;
-POE::Quickie will continue to run your programs until they finish.
+POE::Quickie will continue to run your processes until they finish.
 
 Takes 3 optional parameters: B<'debug'>, B<'default'>, and B<'trace'>. These
 will be passed to the object's L<POE::Session|POE::Session> constructor. See
@@ -459,8 +459,7 @@ its documentation for details.
 
 =head2 C<run>
 
-This method starts a new program. It returns the process id of the newly
-spawned child process.
+This method spawns a new child process. It returns its process id.
 
 You can either call it with a single argument (string, arrayref, or coderef),
 which will used as the B<'Program'> argument, or you can supply the following
@@ -472,21 +471,21 @@ L<POE::Wheel::Run|POE::Wheel::Run/new>'s constructor.
 B<'ProgramArgs'> (optional), will be passed directly to
 L<POE::Wheel::Run|POE::Wheel::Run/new>'s constructor.
 
-B<'Input'> (optional), a string containing the input to the program. This
-string, if provided, will be sent immediately to the program, and its
-stdin will then be shut down. B<Note:> no processing will be done on the data
+B<'Input'> (optional), a string containing the input to the process. This
+string, if provided, will be sent immediately to the child, and its stdin
+will then be shut down. B<Note:> no processing will be done on the data
 before it is sent. For instance, if you are executing a program which expects
 line-based input, be sure to end your input with a newline.
 
 B<'StdoutEvent'> (optional), the event for delivering lines from the
-program's STDOUT. If you don't supply this, they will be printed to the main
-program's STDOUT. To explicitly ignore them, set this to C<undef>.
+process' STDOUT. If you don't supply this, they will be printed to the main
+process's STDOUT. To explicitly ignore them, set this to C<undef>.
 
 B<'StderrEvent'> (optional), the event for delivering lines from the
-program's STDERR. If you don't supply this, they will be printed to the main
-program's STDERR. To explicitly ignore them, set this to C<undef>.
+process' STDERR. If you don't supply this, they will be printed to the main
+process' STDERR. To explicitly ignore them, set this to C<undef>.
 
-B<'ExitEvent'> (optional), the event to be called when the program has exited.
+B<'ExitEvent'> (optional), the event to be called when the process has exited.
 If you don't supply this, a warning indicating the exit code will be printed
 if it is nonzero. To explicitly ignore it, set this to C<undef>.
 
@@ -494,7 +493,7 @@ B<'Context'> (optional), a variable which will be sent back to you with every
 event. If you pass a reference, that same reference will be delivered back
 to you later (not a copy), so you can update it as you see fit.
 
-B<'Timeout'> (optional), a timeout in seconds after which the program will
+B<'Timeout'> (optional), a timeout in seconds after which the process will
 be forcibly L<killed|POE::Wheel::Run/kill> if it is still running. There is
 no timeout by default.
 
@@ -510,12 +509,13 @@ useful if you want to change the input/output filters and such.
 
 =head2 C<killall>
 
-This L<kills|POE::Wheel::Run/kill> all programs which POE::Quickie is
-managing for your session. Takes one optional argument, a signal name.
+This L<kills|POE::Wheel::Run/kill> all processes which POE::Quickie is
+managing for your session. Takes one optional argument, a signal name (e.g.
+B<'SIGTERM'>).
 
-=head2 C<programs>
+=head2 C<processes>
 
-Returns a hash reference of all the currently running programs. The key
+Returns a hash reference of all the currently running processes. The key
 is the process id, and the value is the context variable, if any.
 
 =head1 OUTPUT
@@ -527,7 +527,7 @@ to the options to L<C<run>|/run>.
 
 =over 4
 
-=item C<ARG0>: the chunk of STDOUT generated by the program
+=item C<ARG0>: the chunk of STDOUT generated by the process
 
 =item C<ARG1>: the process id of the child process
 
@@ -539,7 +539,7 @@ to the options to L<C<run>|/run>.
 
 =over 4
 
-=item C<ARG0>: the chunk of STDERR generated by the program
+=item C<ARG0>: the chunk of STDERR generated by the process
 
 =item C<ARG1>: the process id of the child process
 
@@ -563,7 +563,7 @@ to the options to L<C<run>|/run>.
 
 The usage of these functions is modeled after the ones provided by
 L<Capture::Tiny|Capture::Tiny>. They will not return until the executed
-program has exited. However,
+process has exited. However,
 L<C<run_one_timeslice>|POE::Kernel/run_one_timeslice> in POE::Kernel will be
 called in the meantime, so the rest of your application will continue to run.
 
@@ -573,26 +573,26 @@ B<'*Event'> and B<'Context'> arguments.
 =head2 C<quickie>
 
 Returns 3 values: the stdout, stderr, and exit code (L<C<$?>|perlvar>) of the
-program.
+child process.
 
 =head2 C<quickie_tee>
 
 Returns 3 values: the stdout, stderr, and exit code (L<C<$?>|perlvar>) of the
-program. In addition, it will echo the stdout/stderr to your program's
+child process. In addition, it will echo the stdout/stderr to your process'
 stdout/stderr. Beware that stdout and stderr in the merged result are not
 guaranteed to be properly ordered due to buffering.
 
 =head2 C<quickie_merged>
 
 Returns 2 values: the merged stdout & stderr, and exit code (L<C<$?>|perlvar>)
-of the program.
+of the child process.
 
 =head2 C<quickie_tee_merged>
 
 Returns 2 values: the merged stdout & stderr, and exit code (L<C<$?>|perlvar>)
-of the program. In addition, it will echo the merged stdout & stderr to your
-program's stdout. Beware that stdout and stderr in the merged result are not
-guaranteed to be properly ordered due to buffering.
+of the child process. In addition, it will echo the merged stdout & stderr to
+your process' stdout. Beware that stdout and stderr in the merged result are
+not guaranteed to be properly ordered due to buffering.
 
 =head1 AUTHOR
 
